# khaos

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  gen.go  go.mod  go.sum  handle.go  main.go  options.go  runtime.go  test.go
bpf/: Cargo.toml  packet_drop.c
bpf/xdp-packet-drop/: Cargo.toml
bpf/xdp-packet-drop/src/: main.rs
cmd/: root.go
containers/: manager.go  types.go
examples/: example.khaos.yml  patroni_stale_leader.rs
examples/patroni_network_partition/: khaos.yml  script.lua
examples/patroni_stale_leader/: Dockerfile  entrypoint.sh  main.go  patroni.yml
internal/containers/: manager.go  types.go
internal/network/: ipalloc.go  ipcmd.go  manager.go
internal/runtime/: errors.go
internal/runtime/agent/: netns.go
internal/runtime/api/: exec.go  http.go  network.go
logging/: logging.go
network/: ipcmd.go  manager.go
packetdrop/: packetdrop.go  packetdrop_bpf.go
runtime/: context.go  interfaces.go  logging.go  options.go  runtime.go  state.go  test.go
runtime/agent/: netns.go
runtime/api/: cluster.go  exec.go  http.go
runtime/provision/: container.go  network.go
runtime/state/: state.go
runtime/util/: util.go
scripts/: nuke_ctr_namespace.sh  nuke_veths.sh
spec/: cluster.go  common.go  container.go  probes.go
src/: config.rs  lib.rs  main.rs  net.rs  spec.rs  test.rs  validation.rs
src/containers/: manager.rs
src/net/: ip_alloc.rs  ip_cmd.rs  manager.rs  mod.rs
src/spec/: cluster_spec.rs  common.rs  mod.rs
src/testing/: ctx.rs  mod.rs  runner.rs
xdp/: packet_drop.go  packetdrop_bpf.go
(+8 files in other folders)
