[package]
name = "khaos"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.41"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = "0.7.18"
containerd-client = "0.8.0"
oci-spec = "0.9.0"
serde_json = "1.0.149"
nanoid = "0.4.0"
# Matches the dependency version used by containerd-client.
# Should be the same because some types do not match if versions differ
prost-types = "0.13.5"
sha256 = "1.6.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
